syntax = "proto3";

package common;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

// Regular file information
message RegularData {
  // file size, in bytes
  uint64 size = 1;
  // data hash, not present for empty files
  bytes hash = 2;
}

// Directory information
message DirectoryData {
  // directory content, sorted by ascending `file_name`
  repeated MyDirEntry content = 1;
}

// Block / character devices information
message DeviceData {
  uint32 major = 1;
  uint32 minor = 2;
}

// Directory entry information
message MyDirEntry {
  // file name, inside the directory
  string file_name = 1;
  // access rights, on 16 LSB
  uint32 permissions = 2;
  // numerical uid
  uint32 uid = 3;
  // numerical gid
  uint32 gid = 4;
  // modification time
  google.protobuf.Timestamp mtime = 5;
  // type of file, along with type specific data
  oneof specific {
    google.protobuf.NullValue fifo = 9;
    DeviceData character = 10;
    DirectoryData directory = 11;
    DeviceData block = 12;
    RegularData regular = 13;
    string symlink = 14;
    google.protobuf.NullValue socket = 15;
  }
}
